Header fix for Firefox (video not correctly cropped yet)

--- a/app/assets/stylesheets/landing_page.sass
+++ b/app/assets/stylesheets/landing_page.sass
@@ -82,7 +82,7 @@
     position: absolute
     width: 100%
     height: 720px
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.0)),to(rgba(0,0,0,1)))
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.0),rgba(0,0,0,1))
     z-index: 2
 
   &__bgvid
